...
      android:id="@+id/list_title"
      android:layout_margin="5dp"
      android:textStyle="bold"
      android:textSize="18sp"
      android:layout_height="wrap_content"/>
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/department_list"
      android:layout_marginBottom="55dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <!--<ScrollView
      android:layout_marginBottom="55dp"
      android:layout_width="match_parent"
...
