...
            android:layout_height="wrap_content"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"
            app:titleEnabled="false">

            <LinearLayout
                android:id="@+id/profileHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="150dp"
                android:orientation="vertical"
                android:paddingTop="@dimen/app_bar_height"
...
        android:layout_width="match_parent"
        android:layout_height="1dp"
        style="@style/Divider"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>
